# pim

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: commands.rs  commands_args.rs  enviroment.rs  environment.rs  environment_type.rs  helpmd.rs  main.rs  mapper.rs  metadata.rs  prelude.rs  terminal.rs
src/commands/: command_dir.rs  command_find.rs  command_global.rs  command_info.rs  command_list.rs  command_new.rs  command_open.rs  command_run.rs  mod.rs
src/providers/: dotmeta_provider.rs  git_provider.rs  mod.rs  vscode_provider.rs
src/source/: dotmeta_provider.rs  mod.rs
