[package]
name = "project_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_jsonrc = "0.1.0"
ptree = "0.4.0"
shlex = "1.1.0"
tabled = "0.12.2"
clap_complete_command = "0.5.1"
directories = "5.0.1"
anyhow = "1.0.72"
